# crypto-market-regime-detection

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/: feature_scaler.pkl  hmm_model.pkl  label_encoder.pkl  rf_model.pkl  xgb_model.pkl
notebooks/: 01_data_acquisition.ipynb  02_eda_feature_engineering.ipynb  03_hmm_regime_detection.ipynb  04_supervised_classification.ipynb
