[project]
name = "crypto-market-regime-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hmmlearn>=0.3.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
    "xgboost>=3.2.0",
    "yfinance>=1.2.0",
]
